fixed alignment of back to top link
darcs-hash:20071017182454-23886-890b6ddd111e4d4334f4a47adec93880e01aa884.gz

--- a/dokubook_design.css
+++ b/dokubook_design.css
@@ -231,3 +231,7 @@ div.dokuwiki div#toolbox a.profile {
   background: transparent url(images/tool-profile.png) 0px 1px no-repeat;
   padding: 1px 0px 1px 18px;
 }
+
+div.dokuwiki a.top {
+  float: right;
+}
